minimum working example

--- a/asciidoctor-icd-builder/html/test.html
+++ b/asciidoctor-icd-builder/html/test.html
@@ -466,6 +466,12 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="paragraph">
 <p>Content entered directly below the header but before the first section heading is called the preamble.</p>
 </div>
+<div class="paragraph">
+<p>Writing an AsciiDoctor extension using Java is easy! Ask <a href="https://www.twitter.com/mrhaki">@mrhaki</a> about it.</p>
+</div>
+<div class="paragraph">
+<p>This is a user manual for an empty project.</p>
+</div>
 </div>
 </div>
 <div class="sect1">
@@ -650,7 +656,7 @@ This is an attribute reference <a href="https://docs.asciidoctor.org/asciidoc/la
 <div id="footer">
 <div id="footer-text">
 Version 3.0<br>
-Last updated 2021-12-07 14:07:42 +0100
+Last updated 2021-12-07 14:37:49 +0100
 </div>
 </div>
 </body>
